Files were regenerated

--- a/main.tex
+++ b/main.tex
@@ -227,7 +227,7 @@ The chatbots respond to the micromomentos of the people and their level of under
 
 All without having to leave your messaging platform. It will not be necessary that he resorts to the app to buy his tickets or to the web site to consult the prices of souvenirs, or open the browser to trace your route.
  
-The basis of blockchain technology is very simple and comes down to the following algorithm: there is a record of transaction operated between two counterparties. It is sent by the DLT to a register journal on regular basis. Each counterparty has their copied sample of register journal. If someone tries to delete or edit details of a transaction, the system will not let them do that because firstly it will compare the record with other counterparties’ register journals.l 
+The basis of blockchain technology is very simple and comes down to the following algorithm: there is a record of transaction operated between two counterparties. It is sent by the DLT to a register journal on regular basis. Each counterparty has their copied sample of register journal. If someone tries to delete or edit details of a transaction, the system will not let them do that because firstly it will compare the record with other counterparties’ register journals.
 
 \subsection{\label{sec:level1}Cryptocurrency Services}
 
@@ -253,8 +253,6 @@ Chatbots have a high level flow where they are in the place where a complete que
 For the flow of a dialogue system, first an input is received and processed by intentions detectors to infer in a diffuse way the intentions of the user. In parallel there is also an entity detector which also diffuses, from substrings in the input, the type of entity referred to. Finally a function is called and takes the intentions and the entities as input producing an output, this cycle occurs as many times as necessary. Although there are many variations in the different parts, this structure is the one used in a general way.\cite{lee2015natural_sn}.
 
 
-
-
 \begin{figure}[H]
 \centering
 \includegraphics[scale=1.5]{img/Pipeline.JPG}
@@ -267,6 +265,7 @@ Intelligent Wallet ™ works so that the client specifies one or multiple “Int
 
 Instead of browsing a website, you will have a conversation with the bot, mirroring the type of experience you would get when you go into the complete platform.
 
+\subsection{\label{sec:level1}Emotion Detection Engine}
 
 %\section{\label{sec:level1}Conclusion}
 %Sophisticated chatbots break new ground in conversion and activation of prospects into sales. Being a diligent conversational partner, this AI remembers the history of the dialog and is continuously self-learning. Thus, a chatbot can connect with a user on a more intimate level, it has the ability to get under a traders’ skin by adding value that improves their day-to-day lives. However, only a chatbot with a well-designed architecture and advanced functionality can enrich a company’s communications. \cite{Barbara_CL2018}
