Adding changes for second delivery

--- a/References.bib
+++ b/References.bib
@@ -60,6 +60,55 @@ eprint = {
   year={2008}
 }
 
+@article{hsiao2016exploring,
+title={Exploring the influential factors in continuance usage of mobile social Apps: Satisfaction, habit, and customer value perspectives},
+author={Hsiao, Chun-Hua and Chang, Jung-Jung and Tang, Kai-Yu},
+journal={Telematics and Informatics},
+volume={33},
+number={2},
+pages={342--355},
+year={2016},
+publisher={Elsevier}
+}
+
+@article{ramaswamy2017micro,
+title={How micro-moments are changing the rules},
+author={Ramaswamy, Sridhar},
+journal={Acesso em},
+volume={27},
+year={2017}
+}
+
+@article{holtgraves2007perceiving,
+title={Perceiving artificial social agents},
+author={Holtgraves, TM and Ross, Stephen J and Weywadt, CR and Han, TL},
+journal={Computers in human behavior},
+volume={23},
+number={5},
+pages={2163--2174},
+year={2007},
+publisher={Elsevier}
+}
+
+@article{lenhart2010teens,
+title={Teens and mobile phones: Text messaging explodes as teens embrace it as the centerpiece of their communication strategies with friends.},
+author={Lenhart, Amanda and Ling, Rich and Campbell, Scott and Purcell, Kristen},
+journal={Pew Internet \& American Life Project},
+year={2010},
+publisher={ERIC}
+}
+
+@article{vassinen2018rise,
+  title={The rise of conversational commerce: What brands need to know},
+  author={Vassinen, Riku},
+  journal={Journal of Brand Strategy},
+  volume={7},
+  number={1},
+  pages={13--22},
+  year={2018},
+  publisher={Henry Stewart Publications}
+}
+
 @InProceedings{SaliimiSQLBasedChatbot2011_220868591,
 author="Saliimi Lokman, Abbas
 and Mohamad Zain, Jasni",
@@ -209,4 +258,13 @@ url={https://search.proquest.com/docview/1855327260?accountid=28915},
   author={Michael, Maoz and Bern, Elliot and Jenny, Sussin and Olive, Huang and Jim, Robinson and Nadine, LeBlanc and Jim, Davies and Brian, Manusama},
   year={2017},
   publisher={Flurrymobile. tumblr. com [recurso en l{\'\i}nea] Disponible en: http://flurrymobile. tumblr. com/post/155761509355/on-their-tenth-anniversary-mobile-apps-start [Consultado 28 de Enero de 2017]}
+}
+
+@misc{borzestowski2012systems,
+  title={Systems and methods for generating and implementing an interactive man-machine web interface based on natural language processing and avatar virtual agent based character},
+  author={Borzestowski, Marek and Trojanowicz, Marek and Strzalkowski, Marcin},
+  year={2012},
+  month=apr # "~10",
+  publisher={Google Patents},
+  note={US Patent 8,156,060}
 }
